--- a/.github/workflows/test-win.yml
+++ b/.github/workflows/test-win.yml
@@ -39,16 +39,29 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
     
-      - name: Install Boost and Win_Flex_Bison
-        run: | 
-          mkdir D:\a\cpp ;           
-          Invoke-WebRequest https://github.com/lexxmark/winflexbison/releases/download/v2.5.24/win_flex_bison-2.5.24.zip -OutFile D:\a\cpp\win_flex_bison.zip ;          
-          [Environment]::SetEnvironmentVariable("Path", $env:Path + ";D:\a\cpp", "User") ;
-          Invoke-WebRequest https://boostorg.jfrog.io/artifactory/main/release/1.72.0/source/boost_1_72_0.zip -OutFile D:\a\cpp\boost_1_72_0.zip ; 
-          Expand-Archive D:\a\cpp\boost_1_72_0.zip -DestinationPath D:\a\cpp ; 
-          cd D:\a\cpp\boost_1_72_0 ; 
-          .\bootstrap.bat ; 
-          .\b2.exe
+      - name: Install Boost and Win_Flex_Bison1
+        run:  mkdir D:\a\cpp ;           
+
+      - name: Install Boost and Win_Flex_Bison2
+        run:  Invoke-WebRequest https://github.com/lexxmark/winflexbison/releases/download/v2.5.24/win_flex_bison-2.5.24.zip -OutFile D:\a\cpp\win_flex_bison.zip ;          
+      - name: Install Boost and Win_Flex_Bison3
+        run:  [Environment]::SetEnvironmentVariable("Path", $env:Path + ";D:\a\cpp", "User") ;
+          
+      - name: Install Boost and Win_Flex_Bison4
+        run:  Invoke-WebRequest https://boostorg.jfrog.io/artifactory/main/release/1.72.0/source/boost_1_72_0.zip -OutFile D:\a\cpp\boost_1_72_0.zip ; 
+          
+      - name: Install Boost and Win_Flex_Bison5
+        run:  Expand-Archive D:\a\cpp\boost_1_72_0.zip -DestinationPath D:\a\cpp ; 
+          
+      - name: Install Boost and Win_Flex_Bison6
+        run:  cd D:\a\cpp\boost_1_72_0 ; 
+          
+      - name: Install Boost and Win_Flex_Bison7
+        run:  .\bootstrap.bat ; 
+          
+      - name: Install Boost and Win_Flex_Bison8
+        run:  .\b2.exe 
+
       - name: Install OpenSSL
         run:  choco install openssl
       - name: Add Flex and Bison Path and OpenSSL
