--- a/.github/workflows/test-win.yml
+++ b/.github/workflows/test-win.yml
@@ -45,27 +45,16 @@ jobs:
 
       - name: Install Boost and Win_Flex_Bison2
         run:  Invoke-WebRequest https://github.com/lexxmark/winflexbison/releases/download/v2.5.24/win_flex_bison-2.5.24.zip -OutFile D:\a\cpp\win_flex_bison.zip ;          
-          
-      - name: Install Boost and Win_Flex_Bison4
-        run:  Invoke-WebRequest https://boostorg.jfrog.io/artifactory/main/release/1.72.0/source/boost_1_72_0.zip -OutFile D:\a\cpp\boost_1_72_0.zip ; 
-
-      - name: Install Boost and Win_Flex_Bison5
-        shell: bash
-        run: cd /d/a/cpp && ls ./ && unzip boost_1_72_0.zip && echo 'export PATH=/d/a/cpp:$PATH' >> ~/.bash_profile && source ~/.bash_profile
-          
-      - name: Install Boost and Win_Flex_Bison6
-        run:  cd D:\a\cpp\boost_1_72_0 ; 
-          
+      
       - name: Install Boost and Win_Flex_Bison3
-        run:  .\bootstrap.bat ; 
-          
-      - name: Install Boost and Win_Flex_Bison3
-        run:  .\b2.exe 
+        run: choco install boost-msvc-14.2
 
       - name: Install OpenSSL
         run:  choco install openssl
+      
       - name: Add Flex and Bison Path and OpenSSL
         shell: bash
         run: cd /d/a/cpp && unzip win_flex_bison.zip && mv win_flex.exe flex.exe && mv win_bison.exe bison.exe  && echo 'export PATH=/d/a/cpp:$PATH' >> ~/.bash_profile && source ~/.bash_profile
+      
       - name: echo bison
         run:  bison --version
